test/analyze/reachability/reachability.myte
module StatementAfterReturn

// Unreachable statements
fun unreachableAfterReturn(): Int {
  return 1;
  return 2;
}

fun unreachableAfterBreak(): Int {
  while (true) {
    break;
    return 1;
  }

  return 2;
}

fun unreachableAfterContinue(): Int {
  while (true) {
    continue;
    return 1;
  }

  return 2;
}

fun unreachableAfterIf(): Int {
  if (true) {
    return 1;
  } else {
    return 2;
  }

  3;
  return 4;
}

fun unreachableAfterMatchSingleCase(): Int {
  val _ = 1;
  match (1) {
    | _ -> return 1
  }

  return 2;
}

fun unreachableAfterMatchMultipleCases(): Int {
  val _ = 1;
  match (1) {
    | _ -> return 1
    | _ -> return 2
    | _ -> return 3
  }

  return 4;
}

fun unreachableAfterBlock(): Int {
  {
    return 1;
  }

  return 2;
}

fun unreachableWithinNestedFunction(): Int {
  fun inner(): Int {
    return 1;
    return 2;
  }

  return 3;
}

fun unreachableComplexReason():Int {
  while (true) {
    if (true) {
      break;
    } else {
      continue;
    }

    return 1;
  }

  return 2;
}

// Reachable statements
fun reachableAfterBlock(): Int {
  {
    1;
  }

  return 2;
}

fun reachableAfterIf(): Int {
  if (true) {
    return 1;
  }

  if (true) {
    2;
  } else {
    return 3;
  }

  4;
  return 5;
}

fun reachableAfterWhile(): Int {
  while (true) {
    return 1;
  }

  2;
  return 3;
}

fun reachableAfterMatch(): Int {
  val _ = 1;

  match (1) {
    | _ -> ()
  }

  match (1) {
    | _ -> return 1
    | _ -> ()
    | _ -> return 2
  }

  return 3;
}

fun main() {}
